--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,7 @@
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
+debug.url=DEFAULT_URL
+index.file=test.php
 run.as=LOCAL
 url=http://localhost:85/wifis
